use cbor instead of msgpack

--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -41,9 +41,7 @@ slotmap = "1.0.3"
 serde-pickle = { version = "0.6.2", optional = true }
 schemars = "0.8"
 cfg-if = "1.0"
-rmp-serde = { git = "https://github.com/3Hren/msgpack-rust.git", rev = "5bf2c24203ad422233cf35b7b7bfad9f7e811814" }
-rmpv = "0.4"
-ciborium = "0.1"
+serde_cbor = "0.11"
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
