use bson instead of cbor

--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -41,8 +41,7 @@ slotmap = "1.0.3"
 serde-pickle = { version = "0.6.2", optional = true }
 schemars = "0.8"
 cfg-if = "1.0"
-ciborium = "0.1"
-serde_cbor = "0.11"
+bson = "2.0.0-beta.3"
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
