--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = ">=3.9,<3.10"
 PySide2 = "^5.15.2"
 fbs = { git = "https://github.com/silverjam/fbs.git" }
 pycapnp = "^1.1.0"
-cbor2 = "^5.4.1"
+pymongo = "^3.12.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.6b0"
