--- a/web/package.json
+++ b/web/package.json
@@ -31,12 +31,9 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@jprochazk/cbor": "^0.4.9",
     "@tauri-apps/api": "^1.0.0-beta.5",
     "@types/parse-color": "^1.0.1",
-    "cbor-web": "^8.0.1",
-    "cbor-x": "^0.8.3",
-    "color-parse": "^1.4.2",
+    "bson": "^4.5.0",
     "parse-color": "^1.0.0",
     "webgl-plot": "danchitnis/webgl-plot"
   }
