--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,6 @@ version = "0.0.0"
 description = ""
 authors = ["Swift Navigation <dev@swiftnav.com>"]
 
-[tool.poetry.scripts]
-swiftnav-console = "swiftnav_console.main:main"
-
 [tool.poetry.dependencies]
 python = ">=3.9,<3.10"
 PySide2 = "^5.15.2"
@@ -24,14 +21,54 @@ qt5-applications = [{ version = "^5.15.2" }]
 py2many = ">=0.3"
 types-requests = "^2.25.0"
 
+[project.gui-scripts]
+swiftnav-console = "swiftnav_console.main:main"
+
+[project]
+name = "swiftnav_console"
+authors = [
+    {name = "Swift Navigation", email = "dev@swiftnav.com"},
+]
+readme = "README.md"
+classifiers = []
+requires-python = ">=3.8"
+dynamic = ['version', 'description']
+dependencies = [
+  "PySide2 ~= 5.15.2",
+  "pycapnp ~= 1.1.0",
+]
+
+[project.optional-dependencies]
+test = [
+  "black ~= 21.6b0",
+  "jedi ~= 0.18.0",
+  "mypy ~= 0.910",
+  "pylint ~= 2.9.3",
+  "pytest ~= 6.2.4",
+  "setuptools-rust ~= 0.12.1",
+  "psutil ~= 5.8.0",
+  "qt5-applications ~= 5.15.2",
+  "py2man >=0.3",
+  "types-requests ~= 2.25.0",
+]
+
+#[build-system]
+#requires = [
+#  "poetry-core>=1.0.0",
+#  "setuptools>=41.0.0",
+#  "wheel",
+#  "setuptools_rust>=0.12.1",
+#]
+#build-backend = "poetry.core.masonry.api"
+
 [build-system]
 requires = [
-  "poetry-core>=1.0.0",
+  "flit_core >=2,<4",
   "setuptools>=41.0.0",
   "wheel",
-  "setuptools_rust>=0.10.2",
+  "setuptools_rust>=0.12.1",
 ]
-build-backend = "poetry.core.masonry.api"
+build-backend = "flit_core.buildapi"
 
 [tool.black]
 line-length = 120
