--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew install capnp llvm
           elif [ "$RUNNER_OS" == "Windows" ]; then
-              choco install -y capnproto
+              choco install -y capnproto --version 0.8.0
           fi
 
       - name: Pull Git LFS objects
@@ -259,7 +259,8 @@ jobs:
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew install capnp llvm
           elif [ "$RUNNER_OS" == "Windows" ]; then
-              choco install capnproto nsis
+              choco install capnproto --version 0.8.0
+              choco install nsis
           fi
 
       - name: Install stable Rust
