--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -42,6 +42,8 @@ serde-pickle = { version = "0.6.2", optional = true }
 parking_lot = "0.11.1"
 libsettings = { git = "https://github.com/swift-nav/libsettings.git", branch = "steve/rust-new"}
 libsettings-sys = { git = "https://github.com/swift-nav/libsettings.git", branch = "steve/rust-new"}
+#libsettings = { path = "libsettings" }
+#libsettings-sys = { path = "libsettings-sys" }
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
