--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -57,6 +57,8 @@ serial_test = "0.5.1"
 
 [build-dependencies]
 capnpc = "0.14"
+vergen = { version = "5" }
+anyhow = { version = "1", features = ["backtrace"] }
 
 [lib]
 name = "console_backend"
