--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -40,6 +40,8 @@ rand = "0.8.3"
 slotmap = "1.0.3"
 serde-pickle = { version = "0.6.2", optional = true }
 parking_lot = "0.11.1"
+libsettings = { git = "https://github.com/swift-nav/libsettings.git", branch = "steve/rust-new" }
+libsettings-sys = { git = "https://github.com/swift-nav/libsettings.git", branch = "steve/rust-new" }
 rust-ini = "0.17.0"
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
