--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -43,6 +43,8 @@ parking_lot = "0.11.1"
 libsettings = { git = "https://github.com/swift-nav/libsettings.git", branch = "steve/rust-new" }
 libsettings-sys = { git = "https://github.com/swift-nav/libsettings.git", branch = "steve/rust-new" }
 rust-ini = "0.17.0"
+minreq = { version = "2.4.2", features = ["https"] }
+regex = { version = "1.5.4" }
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
