Update Tab + Update Downloader[CPP-46][CPP-47][CPP-296][CPP-303] (#110)
* WIP Update Downloader.

* Update Tab Frontend.

* Working on backend.

* Made some progress on fileio but everything is broken.

* Switch to message passing model for update tab.

* Update console_backend/src/update_tab.rs

Co-authored-by: Jason Mobarak <jason@swift-nav.com>

* Update console_backend/src/update_tab.rs

Co-authored-by: Jason Mobarak <jason@swift-nav.com>

* Update console_backend/src/update_tab.rs

Co-authored-by: Jason Mobarak <jason@swift-nav.com>

* Update tab fixups, renaming structs, ignoring expensive tests.

* Update console_backend/src/types.rs

Co-authored-by: Jason Mobarak <jason@swift-nav.com>

* Update tab renaming some variables.

Co-authored-by: Jason Mobarak <jason@swift-nav.com>

--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -40,6 +40,9 @@ rand = "0.8.3"
 slotmap = "1.0.3"
 serde-pickle = { version = "0.6.2", optional = true }
 parking_lot = "0.11.1"
+minreq = { version = "2.4.2", features = ["https"] }
+regex = { version = "1.5.4" }
+semver = { version = "1" }
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
