--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -17,10 +17,6 @@ chrono = { version = "0.4", features = ["serde"] }
 csv = "1"
 paste = "1"
 pyo3 = { version = "0.13", features = ["extension-module"], optional = true }
-sbp = { git = "https://github.com/swift-nav/libsbp.git", rev = "83110eaca01c4fb1ec1500d578a1cbbaa2b8c788", features = [
-  "json",
-  "swiftnav-rs",
-] }
 serde = { version = "1.0.123", features = ["derive"] }
 tempfile = "3.2.0"
 ordered-float = "2.0"
@@ -43,6 +39,16 @@ parking_lot = "0.11.1"
 minreq = { version = "2.4.2", features = ["https"] }
 regex = { version = "1.5.4" }
 semver = { version = "1" }
+rust-ini = "0.17.0"
+
+[dependencies.sbp]
+git = "https://github.com/swift-nav/libsbp.git"
+rev = "0f35aacf110a9dbe0b832e5feb415933cd0c7f6e"
+features = ["json", "swiftnav-rs", "link"]
+
+[dependencies.libsettings]
+git = "https://github.com/swift-nav/libsettings.git"
+rev = "79c5a023dab189532de45fb806d4c295911caa0e"
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
