--- a/Makefile.toml
+++ b/Makefile.toml
@@ -152,6 +152,18 @@ dependencies = [
 ]
 run_task = "start-console"
 
+[tasks.headless-run]
+command = "cargo"
+args = [
+  "run",
+  "--bin",
+  "headless-console",
+  "--features",
+  "headless-console",
+  "--no-default-features",
+  "${@}",
+]
+
 [tasks.store-version]
 script_runner = "@shell"
 script = '''
