Fix pip install break for packaging version.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,45 +1,46 @@
-altgraph==0.17; sys_platform == "darwin" and python_version >= "3.5"
-appdirs==1.4.4; python_full_version >= "3.6.2"
-astroid==2.6.2; python_version >= "3.6" and python_version < "4.0"
+altgraph==0.17.2; sys_platform == "darwin" and python_version >= "3.5"
+astroid==2.8.0; python_version >= "3.6" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0"
 attrs==21.2.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-black==21.6b0; python_full_version >= "3.6.2"
+black==21.9b0; python_full_version >= "3.6.2"
 click==8.0.1; python_version >= "3.6" and python_full_version >= "3.6.2"
 colorama==0.4.4; python_version >= "3.6" and python_version < "4.0" and sys_platform == "win32" and python_full_version >= "3.6.2" and platform_system == "Windows"
 fbs @ git+https://github.com/silverjam/fbs.git@master
 future==0.18.2; sys_platform == "win32" and python_version >= "3.5" and python_full_version >= "3.6.0"
 iniconfig==1.1.1; python_version >= "3.6"
-isort==5.9.2; python_full_version >= "3.6.1" and python_version < "4.0" and python_version >= "3.6"
+isort==5.9.3; python_full_version >= "3.6.1" and python_version < "4.0" and python_version >= "3.6"
 jedi==0.18.0; python_version >= "3.6"
 lazy-object-proxy==1.6.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0"
-macholib==1.14; sys_platform == "darwin" and python_version >= "3.5"
+macholib==1.15.2; sys_platform == "darwin" and python_version >= "3.5"
 mccabe==0.6.1; python_version >= "3.6" and python_version < "4.0"
 mypy-extensions==0.4.3; python_full_version >= "3.6.2" and python_version >= "3.5"
 mypy==0.910; python_version >= "3.5"
 nuitka==0.6.12.4
-packaging==21.0; python_version >= "3.6"
+packaging==20.9; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 parso==0.8.2; python_version >= "3.6"
-pathspec==0.8.1; python_full_version >= "3.6.2"
-pefile==2021.5.24; sys_platform == "win32" and python_version >= "3.5" and python_full_version >= "3.6.0"
-pluggy==0.13.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+pathspec==0.9.0; python_full_version >= "3.6.2"
+pefile==2021.9.3; sys_platform == "win32" and python_version >= "3.5" and python_full_version >= "3.6.0"
+platformdirs==2.3.0; python_version >= "3.6" and python_full_version >= "3.6.2" and python_version < "4.0"
+pluggy==1.0.0; python_version >= "3.6"
 psutil==5.8.0; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 py2many==0.3; python_version >= "3.8"
 py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pycapnp==1.1.0
-pyinstaller-hooks-contrib==2021.2; python_version >= "3.5"
+pyinstaller-hooks-contrib==2021.3; python_version >= "3.5"
 pyinstaller==4.2; python_version >= "3.5"
-pylint==2.9.3; python_version >= "3.6" and python_version < "4.0"
-pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+pylint==2.11.1; python_version >= "3.6" and python_version < "4.0"
+pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pyside2==5.15.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "3.10")
-pytest==6.2.4; python_version >= "3.6"
+pytest==6.2.5; python_version >= "3.6"
 pywin32-ctypes==0.2.0; sys_platform == "win32" and python_version >= "3.5"
 qt5-applications==5.15.2.2.2; python_version >= "3.5"
-regex==2021.7.6; python_full_version >= "3.6.2"
+regex==2021.8.28; python_full_version >= "3.6.2"
 semantic-version==2.8.5; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 setuptools-rust==0.12.1; python_version >= "3.6"
 shiboken2==5.15.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "3.10"
-toml==0.10.2; python_full_version >= "3.6.2" and python_version >= "3.5" and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.3.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6")
+toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.3.0" and python_version >= "3.6" and python_version < "4.0"
+tomli==1.2.1; python_version >= "3.6" and python_full_version >= "3.6.2"
 toposort==1.6; python_version >= "3.8"
-types-requests==2.25.0
-typing-extensions==3.10.0.0; python_version >= "3.5"
+types-requests==2.25.7
+typing-extensions==3.10.0.2; python_full_version >= "3.6.2" and python_version >= "3.6" and python_version < "3.10"
 wrapt==1.12.1; python_version >= "3.6" and python_version < "4.0"
