--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ psutil = "5.8.0"
 qt5-applications = [{ version = "^5.15.2" }]
 py2many = ">=0.3"
 types-requests = "^2.25.0"
+packaging = "<21.0"
 
 [build-system]
 requires = [
