Use absolute paths specifying exe in backend tests
* On my Windows machine, my git bash environment did not like that the
  executable path was specified with a relative path.
  I'm not exactly sure why, but changing these to an absolute path fixes
  the issue, and I believe should be ok for other environments.
* The `cd -` is unnecessary as this is run in a subshell. This also was
  causing error in my environment.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -431,42 +431,42 @@ conda run -n $CONDA_ENV python utils/bench_runner.py --disk_usage
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=../../target/swift_navigation_console/swift_navigation_console && cd -
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${PWD}/../../target/swift_navigation_console/swift_navigation_console
 '''
 
 [tasks.frontend-cpu-bench.windows]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=../../target/swift_navigation_console/swift_navigation_console.exe && cd -
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${PWD}/target/swift_navigation_console/swift_navigation_console.exe
 '''
 
 [tasks.frontend-cpu-bench.mac]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=../../main.dist/main && cd -
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${PWD}/main.dist/main
 '''
 
 [tasks.frontend-mem-bench.linux]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=../../target/swift_navigation_console/swift_navigation_console && cd -
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${PWD}/target/swift_navigation_console/swift_navigation_console
 '''
 
 [tasks.frontend-mem-bench.windows]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=../../target/swift_navigation_console/swift_navigation_console.exe && cd -
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${PWD}/target/swift_navigation_console/swift_navigation_console.exe
 '''
 
 [tasks.frontend-mem-bench.mac]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=../../main.dist/main && cd -
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${PWD}/main.dist/main
 '''
 
 [tasks.newline-terminator]
