--- a/Makefile.toml
+++ b/Makefile.toml
@@ -121,6 +121,7 @@ Get-ChildItem .\console_backend -Recurse -Include @("*.egg-info", "*.dist-info")
 [tasks.start-console]
 private = true
 #env = { LD_PRELOAD = "/lib/x86_64-linux-gnu/libtcmalloc.so" }
+env = { LD_PRELOAD = "/usr/lib/x86_64-linux-gnu/libjemalloc.so.2" }
 command = "conda"
 args = [
   "run",
