--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -41,7 +41,9 @@ regex = { version = "1.5.4" }
 semver = { version = "1" }
 rust-ini = "0.17.0"
 snap = { version = "1", optional = true }
-mimalloc = { version = "*", default-features = false }
+#mimalloc = { version = "*", default-features = false }
+#tcmalloc = { version = "*" }
+#jemallocator = { version = "0.3" }
 
 [dependencies.sbp]
 git = "https://github.com/swift-nav/libsbp.git"
