--- a/Makefile.toml
+++ b/Makefile.toml
@@ -119,9 +119,9 @@ Get-ChildItem .\console_backend -Recurse -Include @("*.egg-info", "*.dist-info")
 '''
 
 [tasks.start-console]
-private = true
+#private = true
 #env = { LD_PRELOAD = "/lib/x86_64-linux-gnu/libtcmalloc.so" }
-env = { LD_PRELOAD = "/usr/lib/x86_64-linux-gnu/libjemalloc.so.2" }
+#env = { LD_PRELOAD = "/usr/lib/x86_64-linux-gnu/libjemalloc.so" }
 command = "conda"
 args = [
   "run",
