--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -41,18 +41,18 @@ regex = { version = "1.5.4" }
 semver = { version = "1" }
 rust-ini = "0.17.0"
 snap = { version = "1", optional = true }
-#mimalloc = { version = "*", default-features = false }
+mimalloc = { version = "*", default-features = false }
 #tcmalloc = { version = "*" }
 #jemallocator = { version = "0.3" }
 
 [dependencies.sbp]
 git = "https://github.com/swift-nav/libsbp.git"
-rev = "a14a85123ac4e4a3b8830388cac72bc926799d17"
+branch = "silverjam/consistent-heap-size"
 features = ["json", "swiftnav", "link"]
 
 [dependencies.libsettings]
 git = "https://github.com/swift-nav/libsettings.git"
-rev = "ee2b62d1c7234d081c7ce7aa69ad718eba6d2b89"
+branch = "silverjam/consistent-heap-size"
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
