--- a/Makefile.toml
+++ b/Makefile.toml
@@ -158,8 +158,7 @@ args = [
   "run",
   "--bin",
   "headless-console",
-  "--features",
-  "headless-console",
+  "--release",
   "--no-default-features",
   "${@}",
 ]
