--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -40,16 +40,9 @@ minreq = { version = "2.4.2", features = ["https"] }
 regex = { version = "1.5.4" }
 semver = { version = "1" }
 rust-ini = "0.17.0"
+sbp = { version = "3.4.11-beta", features = ["json", "link", "swiftnav"] }
+sbp-settings = "0.1.0"
 env_logger = { version = "0.9", optional = true }
-
-[dependencies.sbp]
-git = "https://github.com/swift-nav/libsbp.git"
-rev = "a14a85123ac4e4a3b8830388cac72bc926799d17"
-features = ["json", "swiftnav", "link"]
-
-[dependencies.libsettings]
-git = "https://github.com/swift-nav/libsettings.git"
-rev = "ee2b62d1c7234d081c7ce7aa69ad718eba6d2b89"
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
